Populate Accounts with user signup, login, protected views

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,10 @@
 {% load static %}
 {% load tz %}
+{% if user.is_authenticated %}
+    <p>Welcome, {{ user.username }} | <a href="{% url 'logout' %}">Logout</a></p>
+{% else %}
+    <p><a href="{% url 'login' %}">Login</a> | <a href="{% url 'signup' %}">Sign up</a></p>
+{% endif %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
