--- a/apps/accounts/templates/accounts/login.html
+++ b/apps/accounts/templates/accounts/login.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
-{% block title %}Login{% endblock %}
-{% block content %}
 <h2>Login</h2>
-<p>Placeholder login form coming soon.</p>
-{% endblock %}
+<form method="post">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Log In</button>
+</form>
