--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,9 @@
     <header>
         <h1><a href="/">Team Assessment Tool</a></h1>
         <nav>
+            <a href="{% url 'dashboard_home' %}">Dashboard</a> |
             <a href="{% url 'team_list' %}">Teams</a> |
-            <a href="{% url 'generate_report' %}">Get Report</a> |
-            <a href="{% url 'login' %}">Login</a> |
+            <a href="{% url 'generate_report' %}">Get Report</a>
         </nav>
         <hr>
     </header>
