--- a/apps/teams/templates/teams/_member_table.html
+++ b/apps/teams/templates/teams/_member_table.html
@@ -11,20 +11,35 @@
     <tbody>
       {% for member in team.members.all %}
         <tr>
-          <td>{{ member.name }}</td>
-          <td>{{ member.email }}</td>
-          <td>
-            <form method="post" style="display: inline;">
-              {% csrf_token %}
+          <form method="post">
+            {% csrf_token %}
+            <td>
+              <input type="text" name="edit_member_name" value="{{ member.name }}" required>
+            </td>
+            <td>
+              <input type="email" name="edit_member_email" value="{{ member.email }}" required>
+            </td>
+            <td>
               <input type="hidden" name="member_id" value="{{ member.id }}">
-              <button name="edit_member" type="submit">Edit</button>
-              <button name="delete_member" type="submit" onclick="return confirm('Are you sure you want to delete this member?')">Delete</button>
-            </form>
-          </td>
+              <button type="submit" name="edit_member">Update</button>
+              <button type="submit" name="delete_member" onclick="return confirm('Are you sure you want to delete this member?')">Delete</button>
+            </td>
+          </form>
         </tr>
       {% empty %}
         <tr><td colspan="3">No members yet.</td></tr>
       {% endfor %}
     </tbody>
   </table>
+
+  <hr>
+
+  <h4>Add New Member</h4>
+  <form method="post" style="margin-top: 10px;">
+    {% csrf_token %}
+    <input type="text" name="new_member_name" placeholder="Name" required>
+    <input type="email" name="new_member_email" placeholder="Email" required>
+    <button type="submit" name="add_member">Add</button>
+  </form>
+
 {% endif %}
