--- a/templates/base.html
+++ b/templates/base.html
@@ -32,5 +32,6 @@
         <hr>
         <p>© {{ now|date:'Y' }} Questadon</p>
     </footer>
+{% block extra_scripts %}{% endblock %}
 </body>
 </html>
