Create sidebar include, base_public, update base.html, apply to all

--- a/apps/assessments/templates/assessments/submit.html
+++ b/apps/assessments/templates/assessments/submit.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_public.html" %}
 {% block title %}Assessment Submitted{% endblock %}
 
 {% block content %}
