Adjust CSS for buttons, nav links, logo

--- a/apps/dashboard/templates/dashboard/home.html
+++ b/apps/dashboard/templates/dashboard/home.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h2>Your Dashboard</h2>
 <p>This is your team’s starting point.</p>
-<a href="{% url 'new_assessment' %}" class="button">➕ New Assessment</a>
+<a href="{% url 'new_assessment' %}" class="button">New Assessment</a>
 
 {% if assessments_data %}
   {% for item in assessments_data %}
